--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <div class="game secondscreen" id="secondscreen">
                 <img src="imagens/gon-and-killua-hxh.gif" alt="gon and killua">
                 <span>PROCURANDO OPONENTES...</span>
+                
             </div>
             <div class="game bind" id="telaAposta">
                 <div>
@@ -121,6 +122,7 @@
 
             <div class="game thirddscreen" id="thirdscreen">
                 <span id="resultado">...</span>
+                <button id="resetar">resetar</button>
                 <div>
                     <div class="personagem">
                         <img src="imagens/pitou.png" alt="pitou">
